# motion_detector_to_tg

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/app/middlewares/: __init__.py
src/app/routers/: __init__.py
src/app/schemas/: __init__.py  settings.py
src/detector/: __init__.py  detector.py
